--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+    <head></head>
+    <body>
+        <h1>I am Wubalem</h1>
+        <h2>The ALX course is awesome</h2>
+        <h3>Life is good</h3>
+        <p>To be happy it is better to be good</p>
+        <p>Africa is an amazing continent, where we need to live in harmony</p>
+        <p>Teachers of the AWE course are amazing</p>
+        <p>Who are the leaders of African countries?</p>
+        <p> Please click on this link to see the image
+            <a href="https://www.holbertonschool.com/holberton-logo.png"></a>
+        </p> 
+    </body>
