--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE html>
+<html>
+    <head></head>
+    <body>
+       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Death by evolution, genetic analyses over 279 days DOI: 10.1093/emph/eoad012 <a href="https://twitter.com/HumBioAssoc?ref_src=twsrc%5Etfw">@HumBioAssoc</a> <a href="https://twitter.com/sacnas?ref_src=twsrc%5Etfw">@sacnas</a> <a href="https://twitter.com/TheLancet?ref_src=twsrc%5Etfw">@TheLancet</a></p>&mdash; Cynthia Beall (@CMBAltitude) <a href="https://twitter.com/CMBAltitude/status/1676937066829979649?ref_src=twsrc%5Etfw">July 6, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+    </body>
