--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -11,5 +11,7 @@
         <p>Who are the leaders of African countries?</p>
         <p> Please click on this link to see the image
             <a href="https://www.holbertonschool.com/holberton-logo.png"></a>
-        </p> 
+        </p>
+        <iframe src="tweet.html" frameborder="1" 
+            name="ouriframe" id="ouriframe"> 
     </body>
