--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,6 +12,6 @@
         <p> Please click on this link to see the image
             <a href="https://www.holbertonschool.com/holberton-logo.png"></a>
         </p>
-        <iframe src="tweet.html" frameborder="1" 
+        <iframe src="tweets.html" frameborder="1" 
             name="ouriframe" id="ouriframe"> 
     </body>
