--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
+    <head>
+        <ul>
+            <li><a href="tweet.html">Prof. Cynthia</a></li>
+            <li><a href="home.html">First html</a></li>
+        </ul>
+    </head>
+    <footer>
+        <p>Made by Wubalem - <a href="https://github.com/wubsenay21" target="_blank">here</a></p>
+    </footer>
+    <main>
+        <article>
         <h1>I am Wubalem</h1>
         <h2>The ALX course is awesome</h2>
         <h3>Life is good</h3>
@@ -12,6 +21,10 @@
         <p> Please click on this link to see the image
             <a href="https://www.holbertonschool.com/holberton-logo.png"></a>
         </p>
-        <iframe src="tweets.html" frameborder="1" 
-            name="ouriframe" id="ouriframe">
-    </body>
+        <iframe src="tweet.html" frameborder="1" 
+            name="ouriframe" id="ouriframe"> 
+        </article>
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>
+    </main>
