--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -27,4 +27,33 @@
         <aside>
             <p>Placeholder to add comment thread later</p>
         </aside>
+        <article>
+            <table>
+                <tr>
+                    <th> Name</th>
+                    <th> Age</th>
+                    <th> Country</th>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+            </table>
+        </article>
     </main>
